# rust-rest-dynamodb

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/products/: mod.rs  routes.rs
