[package]
name = "rocket"
version = "0.1.0"
authors = ["Paul Maddox <paul.maddox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
uuid = { version = "0.8", features = ["serde", "v4"] }
rusoto_core = "0.44.0"
dynomite = "0.9"
serde = "1.0"
anyhow = "1.0"
